--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 		padding:0;
 		font-family: "Roboto";
 		font-weight: 300;
-
+		background: #000 url(bg.jpg) no-repeat
 	}
 	::-webkit-scrollbar {
 	    display: none;
@@ -57,6 +57,7 @@
 		left:2px;
 		right:2px;
 		bottom:2px;
+		border-radius: 50px 0 90px 0;
 		background:#E67E22;
 		text-align: center;
 		color:#eee;
@@ -65,7 +66,7 @@
 
 
 
-.turquoise{background:#1ABC9C}
+.turquoise{background:rgba(#1ABC9C,0.5)}
 .green-sea{background:#16A085}
 .emerland{background:#2ECC71}
 .nephritis{background:#27AE60}
@@ -73,7 +74,7 @@
 .belize-hole{background:#2980B9}
 .amethyst{background:#9B59B6}
 .wisteria{background:#8E44AD}
-.wet-asphalt, .group {background:#34495E}
+.wet-asphalt, .group {background:rgba(#34495E,0.5)}
 .midnight-blue{background:#2C3E50}
 .sun-flower{background:#F1C40F}
 .orange{background:#F39C12}
