--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@
 		background:#E67E22;
 		text-align: center;
 		color:#eee;
+		overflow:hidden;
 	}
 
 
@@ -108,4 +109,12 @@
     font-size: 208%;
     color:rgba(255,255,255,0.6);
 
+}
+
+.bginfo {
+	position: absolute;
+	font-size:300%;
+	color:rgba(255,255,255,0.4);
+	bottom:10px;
+	right:10px;
 }
