--- a/page.css
+++ b/page.css
@@ -2,7 +2,12 @@
 
 }
 
-.hidden-page {
+.hidden-page, .hidden {
   display:none;
   opacity:0;
+}
+
+.backbutton {
+  height:5vw;
+  background-color:rgba(255,255,255,0.3);
 }
