--- a/page.css
+++ b/page.css
@@ -1,13 +1,40 @@
 .page {
-
+  width: 100vw;
+	height: 100vh;
+	position: absolute;
+	backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+	backface-visibility: hidden;
+	transform-style: preserve-3d;
+  transition:all ease 0.3s;
+  z-index: 1;
+  opacity: 1;
 }
 
+
 .hidden-page, .hidden {
+  visibility: hidden;
+	overflow: hidden;
+  transform: translateY(100%);
+
+  opacity: 0.3;
+  z-index: 0;
+}
+
+.hidden {
   display:none;
-  opacity:0;
 }
 
 .backbutton {
   height:5vw;
   background-color:rgba(255,255,255,0.3);
+}
+
+.pt-perspective {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	perspective: 1200px;
+	transform-style: preserve-3d;
 }
