--- a/style.css
+++ b/style.css
@@ -65,6 +65,31 @@
 	}
 
 
+.itemtrigger {
+	position: absolute;
+	width:10vw;
+	height:10vw;
+	line-height: 10vw;
+	font-size: 5vw;
+	border-radius: 200px;
+}
+
+.turn-on {
+	left:-2vw;
+	top:-2vw;
+
+	z-index: 0;
+	background-color: rgba(255,255,255,0.4);
+}
+.turn-off {
+
+	right:-2vw;
+
+
+	z-index: 0;
+	bottom:-2vw;
+	background-color: rgba(0,0,0,0.4);
+}
 
 
 .turquoise{background:rgba(#1ABC9C,0.5)}
@@ -136,5 +161,5 @@
 	right:10px;
 }
 .w2 .bginfo {
-	right: 40px; 
+	right: 40px;
 }
