--- a/style.css
+++ b/style.css
@@ -67,11 +67,13 @@
 
 .itemtrigger {
 	position: absolute;
-	width:10vw;
-	height:10vw;
-	line-height: 10vw;
+	width:30%;
+	height:200%;
+	text-align: center;
+	vertical-align: middle;
 	font-size: 5vw;
-	border-radius: 200px;
+	transform-origin: center center;
+	transform: rotate(-45deg);
 }
 
 .turn-on {
@@ -79,7 +81,7 @@
 	top:-2vw;
 
 	z-index: 0;
-	background-color: rgba(255,255,255,0.4);
+	background-color: rgba(255,255,255,0.2);
 }
 .turn-off {
 
@@ -88,7 +90,7 @@
 
 	z-index: 0;
 	bottom:-2vw;
-	background-color: rgba(0,0,0,0.4);
+	background-color: rgba(0,0,0,0.2);
 }
 
 
