--- a/style.css
+++ b/style.css
@@ -83,6 +83,11 @@
 	z-index: 0;
 	background-color: rgba(255,255,255,0.2);
 }
+
+.ON {
+	transform: rotate(180deg);
+}
+
 .turn-off {
 
 	right:-2vw;
