--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 		padding:0;
 		font-family: 'Lato', sans-serif;
 		font-weight: 300;
-		background: #000 url(bg3.jpg) no-repeat;
+		background: #000 url(bg4.jpg) no-repeat;
+		background-attachment: fixed;
 		background-size: cover;
 	}
 	h1,h2,h3,h4 {
@@ -62,7 +63,7 @@
 		left:2px;
 		right:2px;
 		bottom:2px;
-		border-radius: 50px 0 90px 0;
+		border-radius: 10px;
 		background:rgba(255, 255, 255,0.3);
 		text-align: center;
 		color:#eee;
@@ -78,16 +79,16 @@
 .nephritis{background:#27AE60}
 .peter-river{background:#3498DB}
 .belize-hole{background:#2980B9}
-.amethyst{background:#9B59B6}
+.amethyst{background:rgba(155, 89, 182,0.5);}
 .wisteria{background:#8E44AD}
 .wet-asphalt, .group {background:rgba(#34495E,0.5)}
 .midnight-blue{background:#2C3E50}
-.sun-flower{background:#F1C40F}
+.sun-flower{background:rgba(241, 196, 15,0.5)}
 .orange{background:#F39C12}
 .carrot{background:#E67E22}
 .pumpkin{background:#D35400}
 .alizarin{background:#E74C3C}
-.pomegranate{background:#C0392B}
+.pomegranate{background:rgba(192, 57, 43,0.5)}
 .clouds{background:#ECF0F1;color:#bdc3c7}
 .silver, .switch {background:#BDC3C7}
 .concrete{background:#95A5A6}
@@ -121,6 +122,26 @@
     color:rgba(255,255,255,0.6);
 
 }
+.itemtrigger .fa:before {
+	font-size: 2em;
+	line-height: 2em;
+}
+.turn-on, .turn-off {
+	position: absolute;
+	bottom:0;
+	width:50%;
+}
+
+.turn-on {
+	left:0;
+
+}
+
+.turn-off {
+	right:0;
+
+}
+
 
 .bginfo {
 	position: absolute;
